@@ -67,7 +67,7 @@ class FacetPairing2Test : public FacetPairingTest<2> {
             FacetPairingTest<2>::makeCanonicalAllBounded(1);
             FacetPairingTest<2>::makeCanonicalAllBounded(2);
             FacetPairingTest<2>::makeCanonicalAllBounded(3);
-            // FacetPairingTest<2>::makeCanonicalAllBounded(4);
+            FacetPairingTest<2>::makeCanonicalAllBounded(4);
         }
 
         void rawCountsClosed() {
