@@ -30,6 +30,8 @@ Version 7.1  [ TODO ]
               take the list of all automorphisms if it does not need them.
             - Renamed toTextRep() to textRep().  The old name is kept as
               a deprecated alias.
+            - The IsoList type alias has changed from std::list to std::vector,
+              for better performance.
         Class HilbertPrimal:
             - The header no longer includes the Normaliz headers (which
               Regina does not actually ship with its development files).
